--- a/_posts/2021-02-07-02.md
+++ b/_posts/2021-02-07-02.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-permalink: /prologue/
+permalink: /post2/
 title: '좋아하는 구석 (2)'
 date: 2021-02-07 13:36:00 +09:00
-feature: 'img/posts/03/prologue.png'
+feature: 'img/posts/02/flower.jpeg'
 categories:
   - office life
 tags:
