--- a/_posts/2021-02-07-02.md
+++ b/_posts/2021-02-07-02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-permalink: /post2/
+permalink: /beauty-marketing-career-post2/
 title: '좋아하는 구석 (2)'
 date: 2021-02-07 13:36:00 +09:00
 feature: 'img/posts/02/flower.jpeg'
